Add entries to .gitignore for Terraform and sensitive files

--- a/3.IaC/300141625/.gitignore
+++ b/3.IaC/300141625/.gitignore
@@ -1,1 +1,17 @@
+# Terraform / OpenTofu
+.terraform/
+.terraform.lock.hcl
+terraform.tfstate
+terraform.tfstate.backup
+*.tfstate
+*.tfstate.*
+
+# Variables sensibles
+terraform.tfvars
+*.tfvars
+
+# SSH keys
+*.pem
+*.key
+*.pub
 
